change breakpoints , add blog page

--- a/app/blocks/add-button/add-button.scss
+++ b/app/blocks/add-button/add-button.scss
@@ -8,11 +8,11 @@
   &__heart {
     margin-right: 9px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       margin-right: 7px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-right: 8px;
     }
   }
