--- a/app/blocks/article/article.scss
+++ b/app/blocks/article/article.scss
@@ -12,7 +12,7 @@
 
       font-weight: 700;
 
-      @include screen('lg') {
+      @include screen('md') {
         @include heading-1-lg;
       }
 
@@ -43,7 +43,7 @@
       line-height: (39/40);
       font-weight: 700;
 
-      @include screen('xl') {
+      @include screen('lg') {
         @include heading-1-sm;
 
         line-height: 1.2;
