--- a/app/blocks/blog-news/blog-news.pug
+++ b/app/blocks/blog-news/blog-news.pug
@@ -5,5 +5,5 @@ mixin blog-news(data)
     +e.media
       +e.IMG.image(src=data.src)
       +e.forward Read more...
-        +icon('select-arrow').icon_arrow
+        +icon('arrow2').icon_arrow
     +e.text!= data.text
