--- a/app/blocks/blog-news/blog-news.scss
+++ b/app/blocks/blog-news/blog-news.scss
@@ -21,10 +21,10 @@
     }
 
     &:not(:last-child) {
-      margin-bottom: 30px;
+      margin-bottom: 26px;
 
       @include screen('sm') {
-        margin-bottom: 15px;
+        margin-bottom: 13px;
       }
     }
   }
@@ -38,7 +38,7 @@
     width: 100%;
     transition: color $ease-main;
 
-    @include screen('xl') {
+    @include screen('lg') {
       @include heading-1-sm;
 
       line-height: 1.2;
@@ -88,7 +88,7 @@
     }
 
     &:not(:last-child) {
-      margin-bottom: 40px;
+      margin-bottom: 38px;
 
       @include screen('sm') {
         margin-bottom: 20px;
@@ -133,10 +133,12 @@
   }
 
   &__icon {
-    width: 18px;
-    height: 11px;
+    width: 11px;
+    height: 18px;
+    // width: 18px;
+    // height: 11px;
     transform-origin: 50% 50%;
-    transform: rotate(-90deg);
+    // transform: rotate(-90deg);
     margin-left: 21px;
     transition: transform $ease-main;
   }
