--- a/app/blocks/burger/burger.scss
+++ b/app/blocks/burger/burger.scss
@@ -15,7 +15,7 @@
   will-change: position;
   backface-visibility: hidden;
 
-  @include screen('xl') {
+  @include screen('lg') {
     min-width: 42px;
     width: 42px;
     padding-right: 0;
