--- a/app/blocks/content-zone/content-zone.scss
+++ b/app/blocks/content-zone/content-zone.scss
@@ -93,7 +93,7 @@
     &:not(:last-child) {
       margin-bottom: 30px;
 
-      @include screen('xl') {
+      @include screen('lg') {
         margin-bottom: 32px;
       }
 
