--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -65,7 +65,7 @@
     right: 3px;
     fill: currentColor;
 
-    @include screen('lg') {
+    @include screen('md') {
       right: 12px;
     }
 
@@ -83,7 +83,7 @@
       width: auto;
       height: auto;
 
-      @include screen('lg') {
+      @include screen('md') {
         right: 12px;
       }
 
