--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -420,7 +420,7 @@
     line-height: (26/17);
     position: relative;
 
-    @include screen('lg') {
+    @include screen('md') {
       @include heading-4;
 
       line-height: (26/20);
@@ -953,7 +953,7 @@
         transition: border $ease-main,
           background $ease-main;
 
-        @include screen('lg') {
+        @include screen('md') {
           padding-right: 34px;
         }
       }
@@ -1062,7 +1062,7 @@
     #{$k}__toggle {
       right: 6px;
 
-      @include screen('lg') {
+      @include screen('md') {
         right: 12px;
       }
 
