--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -17,7 +17,7 @@
     &:not(:last-of-type) {
       margin-bottom: 85px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 70px;
       }
 
@@ -30,14 +30,14 @@
       &:not(:last-of-type) {
         margin-bottom: 95px;
 
-        @include screen('lg') {
+        @include screen('md') {
           margin-bottom: 84px;
         }
       }
 
       &_ext {
         &:not(:last-of-type) {
-          @include screen('lg') {
+          @include screen('md') {
             margin-bottom: 90px;
           }
 
@@ -67,7 +67,7 @@
     width: 100%;
     margin-bottom: 55px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 57px;
     }
 
@@ -92,7 +92,7 @@
     }
 
     &_lg-mmg {
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 53px;
       }
 
@@ -151,7 +151,7 @@
     &_compensate {
       line-height: 1;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-top: -12px;
       }
 
@@ -231,7 +231,7 @@
       opacity: 0;
       pointer-events: none;
 
-      @include screen('lg') {
+      @include screen('md') {
         position: fixed;
         border-top: 1px solid $color-border-light;
         padding: 0 $container-padding-tablet;
@@ -243,7 +243,7 @@
       }
 
       body.is-login & {
-        @include screen('lg') {
+        @include screen('md') {
           bottom: 70px;
         }
 
@@ -268,11 +268,11 @@
   &_pb {
     padding-bottom: 104px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       padding-bottom: 88px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       padding-bottom: 102px;
     }
 
