--- a/app/blocks/header-menu/header-menu.pug
+++ b/app/blocks/header-menu/header-menu.pug
@@ -1,8 +1,8 @@
 mixin header-menu()
   +b.UL.header-menu&attributes(attributes)
-    +e.LI.item_bmg.hide-lg
+    +e.LI.item_bmg.hide-md
       +link(href="#") Become a host
-    +e.LI.item.hide-lg
+    +e.LI.item.hide-md
       +link(href="#") Support
     +e.LI.item
       +link(href="#") Sign Up
