--- a/app/blocks/header-user/header-user.scss
+++ b/app/blocks/header-user/header-user.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   padding-right: 18px;
 
-  @include screen('xl') {
+  @include screen('lg') {
     padding-right: 0;
   }
 
@@ -17,7 +17,7 @@
     &:not(:last-child) {
       margin-right: 80px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-right: 0;
       }
     }
@@ -26,7 +26,7 @@
       &:not(:last-child) {
         margin-right: 74px;
 
-        @include screen('lg') {
+        @include screen('md') {
           margin-right: 0;
         }
       }
@@ -38,7 +38,7 @@
     align-items: center;
     justify-content: flex-end;
 
-    @include screen('lg') {
+    @include screen('md') {
       display: none;
     }
   }
