--- a/app/blocks/hint/hint.scss
+++ b/app/blocks/hint/hint.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   padding: 35px 20px 10px 23px;
 
-  @include screen('lg') {
+  @include screen('md') {
     padding: 25px 20px 10px;
   }
 
@@ -22,7 +22,7 @@
     align-items: center;
     width: 100%;
 
-    @include screen('lg') {
+    @include screen('md') {
       display: none;
     }
   }
@@ -33,7 +33,7 @@
     transform: rotate(-90deg);
     fill: $color-hot-desk;
 
-    @include screen('lg') {
+    @include screen('md') {
       transform: rotate(0);
     }
   }
