--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -7,7 +7,7 @@
     position: relative;
     padding-left: 38px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       padding-left: 34px;
     }
 
