--- a/app/blocks/news/news.scss
+++ b/app/blocks/news/news.scss
@@ -22,7 +22,7 @@
     &:not(:last-child) {
       margin-bottom: 8px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 17px;
       }
 
@@ -53,7 +53,7 @@
     &:not(:last-child) {
       margin-bottom: 8px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 6px;
       }
 
