--- a/app/blocks/offer/offer.scss
+++ b/app/blocks/offer/offer.scss
@@ -8,7 +8,7 @@
   padding-top: 20px;
   padding-bottom: 23px;
 
-  @include screen('lg') {
+  @include screen('md') {
     padding-top: 23px;
     padding-bottom: 27px;
   }
@@ -84,7 +84,7 @@
       transition: opacity $ease-main;
       box-sizing: border-box;
 
-      @include screen('lg') {
+      @include screen('md') {
         padding-left: 26px;
         margin-right: 30px;
       }
@@ -121,7 +121,7 @@
     &:not(:last-child) {
       margin-bottom: 40px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 28px;
       }
 
@@ -146,7 +146,7 @@
     &:not(:last-child) {
       margin-bottom: 17px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 25px;
       }
 
@@ -176,7 +176,7 @@
     opacity: 0;
     transition: opacity $ease-main;
 
-    @include screen('lg') {
+    @include screen('md') {
       flex-direction: column;
       align-items: flex-end;
       opacity: 1;
@@ -215,7 +215,7 @@
     &:not(:first-child) {
       margin-left: 26px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-top: 25px;
         margin-left: 0;
       }
