--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -5,7 +5,7 @@
   width: 100%;
   margin-bottom: 124px;
 
-  @include screen('lg') {
+  @include screen('md') {
     margin-bottom: 65px;
   }
 
@@ -17,7 +17,7 @@
     color: $color-white;
     margin-bottom: 95px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 68px;
     }
 
@@ -36,7 +36,7 @@
     &_bmg {
       margin-bottom: 72px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 70px;
       }
 
@@ -75,7 +75,7 @@
   &_mid-mg {
     margin-bottom: 116px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 74px;
     }
 
@@ -87,11 +87,11 @@
   &_sm-mg {
     margin-bottom: 100px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       margin-bottom: 85px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 68px;
     }
 
@@ -103,7 +103,7 @@
   &_ltl-mg {
     margin-bottom: 108px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 66px;
     }
 
@@ -115,7 +115,7 @@
   &_mg {
     margin-bottom: 95px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 88px;
     }
 
@@ -127,11 +127,11 @@
   &_smaller-mg {
     margin-bottom: 72px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       margin-bottom: 75px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 48px;
     }
 
@@ -143,7 +143,7 @@
   &_promo {
     margin-bottom: 89px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 66px;
     }
 
@@ -178,7 +178,7 @@
     width: 100%;
     margin-bottom: 56px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 26px;
     }
 
@@ -213,7 +213,7 @@
     #{$b}_bg & {
       margin-bottom: 62px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 60px;
       }
 
@@ -226,11 +226,11 @@
       display: flex;
       margin-bottom: 120px;
 
-      @include screen('xl') {
+      @include screen('lg') {
         margin-bottom: 118px;
       }
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 110px;
         flex-wrap: wrap;
       }
@@ -252,7 +252,7 @@
     }
 
     &_subscribe {
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 44px;
       }
 
@@ -281,7 +281,7 @@
     }
 
     &_tab-smmg {
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 36px;
       }
 
@@ -319,7 +319,7 @@
 
       font-weight: 700;
 
-      @include screen('lg') {
+      @include screen('md') {
         @include heading-1-lg;
       }
 
@@ -329,7 +329,7 @@
     }
 
     #{$b}_lead & {
-      @include screen('lg') {
+      @include screen('md') {
         max-width: 460px;
       }
     }
@@ -340,7 +340,7 @@
       &:not(:last-child) {
         margin-bottom: 37px;
 
-        @include screen('lg') {
+        @include screen('md') {
           margin-bottom: 60px;
         }
 
@@ -386,11 +386,11 @@
       padding: 105px 136px 28px;
       z-index: 2;
 
-      @include screen('xl') {
+      @include screen('lg') {
         padding: 105px 56px 28px;
       }
 
-      @include screen('lg') {
+      @include screen('md') {
         padding: 70px 42px 42px 56px;
       }
 
@@ -402,11 +402,11 @@
     #{$b}_lead & {
       padding: 124px 136px 28px;
 
-      @include screen('xl') {
+      @include screen('lg') {
         padding: 124px 56px 28px 65px;
       }
 
-      @include screen('lg') {
+      @include screen('md') {
         padding: 50px 56px 60px;
       }
 
@@ -424,11 +424,11 @@
       width: 41%;
       padding-right: 45px;
 
-      @include screen('xl') {
+      @include screen('lg') {
         width: 49.3%;
       }
 
-      @include screen('lg') {
+      @include screen('md') {
         width: 100%;
         padding-right: 0;
         margin-bottom: 51px;
@@ -442,11 +442,11 @@
     &_right {
       width: 59%;
 
-      @include screen('xl') {
+      @include screen('lg') {
         width: 50.7%;
       }
 
-      @include screen('lg') {
+      @include screen('md') {
         width: 100%;
       }
     }
@@ -507,7 +507,7 @@
     &-top {
       margin-right: 50px;
 
-      @include screen('lg') {
+      @include screen('md') {
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -524,7 +524,7 @@
     &-bottom {
       flex: 1;
 
-      @include screen('lg') {
+      @include screen('md') {
         flex: none;
         width: 100%;
       }
