--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -55,7 +55,7 @@
       align-items: center;
       pointer-events: auto;
 
-      @include screen('xl') {
+      @include screen('lg') {
         flex: none;
         width: 40px;
         min-width: 40px;
@@ -88,7 +88,7 @@
       width: 100%;
       max-width: 1620px;
 
-      @include screen('xl') {
+      @include screen('lg') {
         flex: 1;
       }
     }
