--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -22,7 +22,7 @@
     &:not(:last-child) {
       margin-bottom: 10px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 3px;
       }
 
@@ -43,11 +43,11 @@
     transition: opacity $ease-main;
     opacity: 0;
 
-    @include screen('xl') {
+    @include screen('lg') {
       top: 15px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       top: 16px;
       opacity: 1;
     }
@@ -58,7 +58,7 @@
     }
 
     #{$b}:hover & {
-      @include screen('lg', min) {
+      @include screen('md', min) {
         opacity: 1;
       }
     }
@@ -72,7 +72,7 @@
     width: 100%;
     margin-top: -6px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-top: 3px;
     }
 
