--- a/app/blocks/tip/tip.scss
+++ b/app/blocks/tip/tip.scss
@@ -23,7 +23,7 @@
     height: 16px;
     fill: $color-basic;
 
-    @include screen('lg') {
+    @include screen('md') {
       top: 27px;
       left: 21px;
     }
@@ -45,7 +45,7 @@
     padding: 23px 11px 23px 56px;
     color: $color-tip;
 
-    @include screen('lg') {
+    @include screen('md') {
       padding: 25px 40px 25px 56px;
       line-height: 1.24;
     }
@@ -73,7 +73,7 @@
     box-sizing: border-box;
     padding: 23px 14px;
 
-    @include screen('lg') {
+    @include screen('md') {
       width: 106px;
       min-width: 106px;
     }
