--- a/app/blocks/travel-time/travel-time.scss
+++ b/app/blocks/travel-time/travel-time.scss
@@ -19,7 +19,7 @@
     box-sizing: border-box;
     padding-left: 4px;
 
-    @include screen('lg') {
+    @include screen('md') {
       width: 28px;
     }
 
@@ -34,7 +34,7 @@
     fill: $color-basic;
     margin-right: 0;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-right: 4px;
     }
 
@@ -47,7 +47,7 @@
       width: 20px;
       margin-right: -2px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-right: 0;
       }
     }
