--- a/app/components/condition-search/condition-search.scss
+++ b/app/components/condition-search/condition-search.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   padding-top: 12px;
 
-  @include screen('xl') {
+  @include screen('lg') {
     flex-direction: column;
     justify-content: flex-start;
   }
@@ -16,14 +16,14 @@
     text-align: right;
     min-width: 244px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       min-width: 0;
       width: 100%;
       text-align: left;
       margin-bottom: 30px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 44px;
     }
 
@@ -41,7 +41,7 @@
     box-sizing: border-box;
     padding-right: 37px;
 
-    @include screen('lg') {
+    @include screen('md') {
       @include heading-4;
 
       line-height: (26/20);
@@ -57,12 +57,12 @@
   &__form {
     display: block;
 
-    @include screen('xl') {
+    @include screen('lg') {
       width: 100%;
       max-width: 540px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       max-width: 585px;
     }
 
@@ -79,13 +79,13 @@
     padding-right: 8px;
     margin-bottom: 38px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       padding-right: 14px;
       justify-content: space-between;
       margin: 0 -7px 38px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       padding-left: 2px;
       padding-right: 2px;
     }
@@ -95,11 +95,11 @@
     &:not(:first-child) {
       margin-left: 32px;
 
-      @include screen('xl') {
+      @include screen('lg') {
         margin-left: 20px;
       }
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-left: 0;
       }
     }
@@ -157,7 +157,7 @@
     box-sizing: border-box;
     padding-right: 4px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       margin: 0 -7px;
       padding-right: 9px;
     }
@@ -171,7 +171,7 @@
   &__buttons {
     margin-left: 19px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-left: 30px;
     }
 
