--- a/app/components/content/content.pug
+++ b/app/components/content/content.pug
@@ -3,7 +3,7 @@ mixin content()
     .container.container_content
       +e.column_main
         block
-      +e.column_aside.hide-lg(data-sticky-parent)
+      +e.column_aside.hide-md(data-sticky-parent)
         +scroll-form
 
 mixin content-origin()
