--- a/app/components/footer/footer.pug
+++ b/app/components/footer/footer.pug
@@ -4,13 +4,13 @@ mixin footer()
       +e.top
         +e.logo
           +logo-image._footer
-          +e.info(data-slot-id="footer-contacts" data-slot-res="lg")
+          +e.info(data-slot-id="footer-contacts" data-slot-res="md")
         +e.navigation
           +nav-list(getData('footer-menu-1.json'))._small.__list
           +nav-list(getData('footer-menu-2.json'))._small.__list
           +nav-list(getData('footer-menu-3.json'))._small.__list
         +e.information
-          +e.controls.hide-lg(data-slot-id="footer-contacts" data-slot-res="xl")
+          +e.controls.hide-md(data-slot-id="footer-contacts" data-slot-res="xl")
             +e.contacts(data-target-slot="footer-contacts")
               +link()(href="mailto:info@spacepool.com")._bold info@spacepool.com
               +e.copyright.hide-sm &copy; Space Pool ltd. 2019
