--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -5,7 +5,7 @@
   border-top: 1px solid rgba($color-basic-light, .21);
   padding: 63px 0 0;
 
-  @include screen('lg') {
+  @include screen('md') {
     padding-top: 59px;
   }
 
@@ -17,7 +17,7 @@
     display: flex;
     margin-bottom: 64px;
 
-    @include screen('lg') {
+    @include screen('md') {
       flex-wrap: wrap;
       margin-bottom: 50px;
     }
@@ -32,7 +32,7 @@
     min-width: 230px;
     width: 234px;
 
-    @include screen('lg') {
+    @include screen('md') {
       width: 100%;
       display: flex;
       justify-content: space-between;
@@ -47,7 +47,7 @@
     .logo {
       margin-top: -16px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-top: -12px;
       }
 
@@ -137,7 +137,7 @@
     display: flex;
     align-items: center;
 
-    @include screen('lg') {
+    @include screen('md') {
       padding-right: 4px;
     }
 
@@ -160,7 +160,7 @@
     box-sizing: border-box;
     padding: 33px 0 38px;
 
-    @include screen('lg') {
+    @include screen('md') {
       padding: 31px 0 35px;
     }
 
@@ -196,7 +196,7 @@
   }
 
   body.is-login & {
-    @include screen('lg') {
+    @include screen('md') {
       padding-bottom: 70px;
     }
 
@@ -206,7 +206,7 @@
   }
 
   body.is-panel & {
-    @include screen('lg') {
+    @include screen('md') {
       padding-bottom: 70px;
     }
   }
