--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -95,11 +95,11 @@
     height: 40px;
     align-self: top;
 
-    @include screen('xl') {
+    @include screen('lg') {
       min-width: 42px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-left: 58px;
     }
 
