--- a/app/components/lead/lead.scss
+++ b/app/components/lead/lead.scss
@@ -7,7 +7,7 @@
     background-color: $color-grey-dark;
     color: $color-white;
 
-    @include screen('lg') {
+    @include screen('md') {
       display: block;
     }
   }
@@ -19,11 +19,11 @@
     align-items: flex-start;
     width: 34.3%;
 
-    @include screen('xl') {
+    @include screen('lg') {
       width: 34.8%;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       width: 100%;
     }
   }
@@ -32,11 +32,11 @@
     display: flex;
     width: 65.7%;
 
-    @include screen('xl') {
+    @include screen('lg') {
       width: 65.2%;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -50,12 +50,12 @@
     width: 100%;
     padding: 55px 67px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       padding: 37px 40px 0 46px;
       margin-bottom: 42px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       padding: 40px 40px 0 46px;
       margin-bottom: 32px;
     }
@@ -75,13 +75,13 @@
     width: 100%;
     padding: 0 67px 50px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       padding: 0 40px 50px 46px;
       flex: 1;
       justify-content: space-between;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       flex-direction: row;
       justify-content: space-between;
       align-items: flex-end;
@@ -103,7 +103,7 @@
     width: 100%;
     padding-top: 56%;
 
-    @include screen('lg') {
+    @include screen('md') {
       order: 2;
     }
   }
@@ -120,11 +120,11 @@
     display: block;
     margin-bottom: 30px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       margin-bottom: 20px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
@@ -139,18 +139,18 @@
   &__address {
     margin-bottom: 44px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       margin-bottom: 30px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-top: -9px;
       margin-bottom: 0;
     }
   }
 
   &__markers {
-    @include screen('lg') {
+    @include screen('md') {
       margin-left: 20px;
     }
   }
@@ -161,7 +161,7 @@
     flex-wrap: wrap;
     margin-top: -22px;
 
-    @include screen('lg') {}
+    @include screen('md') {}
 
     @include screen('sm') {
       flex-direction: column;
@@ -172,7 +172,7 @@
     &:not(:last-child) {
       margin-bottom: 56px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: -4px;
       }
 
@@ -188,13 +188,13 @@
     font-weight: 700;
     margin-top: 22px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       @include text;
 
       line-height: (26/14);
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       @include text16;
     }
 
@@ -205,11 +205,11 @@
     &:not(:last-child) {
       margin-right: 53px;
 
-      @include screen('xl') {
+      @include screen('lg') {
         margin-right: 30px;
       }
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-right: 27px;
       }
 
