--- a/app/components/main-menu/main-menu.scss
+++ b/app/components/main-menu/main-menu.scss
@@ -44,7 +44,7 @@
       pointer-events: auto;
     }
 
-    @include screen('xl') {
+    @include screen('lg') {
       width: 448px;
     }
 
@@ -107,7 +107,7 @@
       padding: 0 40px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       padding: 0 36px;
     }
 
@@ -133,7 +133,7 @@
     box-sizing: border-box;
     padding-bottom: 22px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       max-width: 320px;
     }
 
@@ -144,7 +144,7 @@
     .nav-list {
       margin-top: -14px;
 
-      @include screen('xl') {
+      @include screen('lg') {
         margin-top: -17px;
       }
     }
@@ -159,7 +159,7 @@
     padding-top: 26px;
     padding-bottom: 20px;
 
-    @include screen('xl') {
+    @include screen('lg') {
       max-width: 320px;
     }
 
@@ -170,7 +170,7 @@
     .nav-list:not(:last-child) {
       margin-bottom: 29px;
 
-      @include screen('xl') {
+      @include screen('lg') {
         margin-bottom: 20px;
       }
     }
