--- a/app/components/space-info/space-info.scss
+++ b/app/components/space-info/space-info.scss
@@ -22,7 +22,7 @@
     }
 
     &:first-child {
-      @include screen('lg') {
+      @include screen('md') {
         margin-top: -6px;
       }
 
@@ -34,7 +34,7 @@
     &:not(:last-child) {
       margin-bottom: 23px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 30px;
       }
 
@@ -52,7 +52,7 @@
     &:not(:last-child) {
       margin-bottom: 30px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 34px;
       }
 
@@ -77,7 +77,7 @@
     &:not(:last-child) {
       margin-bottom: 22px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 36px;
       }
 
@@ -103,7 +103,7 @@
     &:not(:last-child) {
       margin-bottom: 46px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-bottom: 36px;
       }
 
