--- a/app/components/space-offer/space-offer.scss
+++ b/app/components/space-offer/space-offer.scss
@@ -10,7 +10,7 @@
   &:not(:last-child) {
     margin-bottom: 104px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 80px;
     }
 
@@ -58,7 +58,7 @@
     line-height: 0;
     overflow: hidden;
 
-    @include screen('lg') {
+    @include screen('md') {
       display: none;
       width: 50%;
       padding-right: 15px;
@@ -81,7 +81,7 @@
     width: 69.33%;
     z-index: 2;
 
-    @include screen('lg') {
+    @include screen('md') {
       width: 100%;
       padding-left: 0;
     }
@@ -100,7 +100,7 @@
     flex: 1;
     margin-top: -8px;
 
-    @include screen('lg') {
+    @include screen('md') {
       width: 50%;
       padding-left: 15px;
       margin-bottom: 0;
@@ -117,7 +117,7 @@
     display: block;
     width: 100%;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-top: 20px;
       border-top: 1px solid $color-border-light;
     }
@@ -130,7 +130,7 @@
   &__media-wrapper {
     display: none;
 
-    @include screen('lg') {
+    @include screen('md') {
       display: block;
       box-sizing: border-box;
       width: 50%;
@@ -152,7 +152,7 @@
     margin-right: 30px;
     padding-top: 4px;
 
-    @include screen('lg') {
+    @include screen('md') {
       flex-direction: column;
       align-items: flex-start;
       padding-top: 8px;
@@ -173,7 +173,7 @@
     &:not(:last-child) {
       margin-right: 10px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-right: 0;
         margin-bottom: 14px;
       }
@@ -185,7 +185,7 @@
     &:not(:last-child) {
       margin-right: 7px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-right: 0;
         margin-bottom: 14px;
       }
@@ -207,7 +207,7 @@
     width: 100%;
     margin-top: 16px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-top: 21px;
     }
 
@@ -249,7 +249,7 @@
     width: 100%;
     margin-top: 14px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-top: 20px;
     }
 
@@ -271,7 +271,7 @@
     height: 100%;
     background-color: $color-hint-bg;
 
-    @include screen('lg') {
+    @include screen('md') {
       height: auto;
     }
 
@@ -293,13 +293,13 @@
       opacity: 0;
       transition: opacity $ease-main;
 
-      @include screen('lg') {
+      @include screen('md') {
         opacity: 1;
         pointer-events: auto;
       }
 
       #{$b}.is-empty & {
-        @include screen('lg') {
+        @include screen('md') {
           opacity: 0;
           pointer-events: none;
         }
@@ -341,7 +341,7 @@
     flex: none;
     align-self: flex-end;
 
-    @include screen('lg') {
+    @include screen('md') {
       justify-content: space-between;
       padding: 0 40px 16px 35px;
     }
@@ -381,7 +381,7 @@
       margin-left: auto;
       min-width: 140px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-left: 0;
         width: 100%;
       }
@@ -395,7 +395,7 @@
     padding: 8px 25px 7px 50px;
     min-height: 40px;
 
-    @include screen('lg') {
+    @include screen('md') {
       width: 100%;
       flex: none;
       padding: 8px 40px 7px 35px;
