--- a/app/components/user-menu-panel/user-menu-panel.scss
+++ b/app/components/user-menu-panel/user-menu-panel.scss
@@ -23,7 +23,7 @@
   }
 
   body.is-login:not(.is-panel) & {
-    @include screen('lg') {
+    @include screen('md') {
       opacity: 1;
       pointer-events: auto;
     }
