--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -1181,9 +1181,9 @@ block content
       +ui-section-content
         +ui-description .space-offer
         +space-offer(class=spaceOffers[0].status)
-          +space-offer-side.hide-lg(data-slot-id=spaceOffers[0].id data-slot-res="xl")
+          +space-offer-side.hide-md(data-slot-id=spaceOffers[0].id data-slot-res="xl")
           +space-offer-content
-            +e.media-wrapper_lg.hide-from-lg.hide-sm(data-slot-id=spaceOffers[0].id data-slot-res="lg")
+            +e.media-wrapper_lg.hide-from-md.hide-sm(data-slot-id=spaceOffers[0].id data-slot-res="lg")
             +e.describe
               +space-offer-info
                 if spaceOffers[0].offerBoxes
@@ -1207,9 +1207,9 @@ block content
               +space-offer-bottom(spaceOffers[0].offers)
         +ui-description .space-offer.is-empty
         +space-offer(class=spaceOffers[3].status)
-          +space-offer-side.hide-lg(data-slot-id=spaceOffers[3].id data-slot-res="xl")
+          +space-offer-side.hide-md(data-slot-id=spaceOffers[3].id data-slot-res="xl")
           +space-offer-content
-            +e.media-wrapper_lg.hide-from-lg.hide-sm(data-slot-id=spaceOffers[3].id data-slot-res="lg")
+            +e.media-wrapper_lg.hide-from-md.hide-sm(data-slot-id=spaceOffers[3].id data-slot-res="lg")
             +e.describe
               +space-offer-info
                 if spaceOffers[3].offerBoxes
@@ -1249,10 +1249,10 @@ block content
       +ui-section-content
         +ui-description .space-info
         +grid.grid_no-top
-          +col({xl: 3, lg: 12})
+          +col({xl: 3, md:12})
             +space-info
               +grid.grid_layout.grid_no-top
-                +col({sm: 12, lg: 6, xl: 12})
+                +col({sm: 12, md:6, xl: 12})
                   +space-info-title() Blooming Founders Office Space (Former Blooms London old Factory)
                   +space-info-media.hide-only-lg(data-slot-id="media" data-slot-res="sm xl")
                     +space-info-image()(src="assets/images/room3.jpg" data-target-slot="media")
@@ -1262,7 +1262,7 @@ block content
                   +space-info-buttons.hide-only-lg(data-slot-id="button" data-slot-res="sm xl")
                     +space-info-button(data-target-slot="button") Add rental offers for this space
                   +space-info-controls
-                +col({sm: 12, lg: 6, xl: 12}).hide-sm.hide-from-lg
+                +col({sm: 12, md:6, xl: 12}).hide-sm.hide-from-md
                   +space-info-media(data-slot-id="media" data-slot-res="lg")
                   +space-info-buttons(data-slot-id="button" data-slot-res="lg")
 
