--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -17,8 +17,8 @@ $grid-gap-big: 50px;
 $grid-gap-vertical-big: 60px;
 $grid-col-width: $grid-container-width/$grid-cols; // Ширина одной колонки
 $breakpoints: ('xl': 1700px,
-'lg': 1280px,
-'md': 1024px,
+'lg': 1300px,
+'md': 1020px,
 'sm': 768px,
 'xs': 480px);
 
@@ -93,7 +93,7 @@ $color-border-dark: #919494;
 $color-news-bg: #252b34;
 $color-news-hover-title: #181f28;
 $color-news-hover-text: #0a0d11;
-
+$color-pagination-disabled: #ccd2d9;
 
 // ##########
 // Transitions
