--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -11,7 +11,7 @@
   will-change: height;
   touch-action: manipulation;
 
-  @include screen('lg') {
+  @include screen('md') {
     cursor: pointer;
   }
 
@@ -121,11 +121,11 @@
     box-sizing: border-box;
     touch-action: manipulation;
 
-    @include screen('xl') {
+    @include screen('lg') {
       padding: 16px 0 29px 34px;
     }
 
-    @include screen('lg') {
+    @include screen('md') {
       padding: 18px 0 29px 34px;
     }
 
