--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -103,7 +103,7 @@
       #{$b}_border & {
         left: 22px;
 
-        @include screen('lg') {
+        @include screen('md') {
           left: 18px;
         }
       }
