--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -30,7 +30,7 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     margin-left: -25px;
     margin-right: -25px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-left: -15px;
       margin-right: -15px;
       margin-top: -30px;
@@ -40,6 +40,14 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       margin-left: -5px;
       margin-right: -5px;
       margin-top: -10px;
+    }
+  }
+
+  &_blog {
+    margin-top: -100px;
+
+    @include screen('sm') {
+      margin-top: -60px;
     }
   }
 
@@ -73,13 +81,13 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     }
 
     &_lg-order2 {
-      @include screen('lg') {
+      @include screen('md') {
         order: 2;
       }
     }
 
     &_lg-order3 {
-      @include screen('lg') {
+      @include screen('md') {
         order: 3;
       }
     }
@@ -107,12 +115,20 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     #{$b}_layout & {
       padding: 50px 25px 0;
 
-      @include screen('lg') {
+      @include screen('md') {
         padding: 30px 15px 0;
       }
 
       @include screen('sm') {
         padding: 10px 5px 0;
+      }
+    }
+
+    #{$b}_blog & {
+      padding-top: 100px;
+
+      @include screen('sm') {
+        padding-top: 60px;
       }
     }
 
