--- a/app/blocks/info-price/info-price.scss
+++ b/app/blocks/info-price/info-price.scss
@@ -7,7 +7,7 @@
     font-weight: 300;
     margin-bottom: 4px;
 
-    @include screen('lg') {
+    @include screen('md') {
       text-align: right;
       margin-bottom: 2px;
     }
