--- a/app/blocks/offers/offers.scss
+++ b/app/blocks/offers/offers.scss
@@ -57,7 +57,7 @@
     &:not(:last-child) {
       margin-right: 50px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-right: 30px;
       }
 
@@ -163,7 +163,7 @@
     padding: 30px 0;
     padding-left: 19px;
 
-    @include screen('lg') {
+    @include screen('md') {
       padding-left: 23px;
     }
 
@@ -203,7 +203,7 @@
     &_left {
       margin-right: 50px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-right: 30px;
       }
 
