--- a/app/blocks/short-profile/short-profile.scss
+++ b/app/blocks/short-profile/short-profile.scss
@@ -7,7 +7,7 @@
   &__avatar {
     margin-right: 10px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-right: 15px;
     }
 
