--- a/app/components/breadcrumbs-box/breadcrumbs-box.scss
+++ b/app/components/breadcrumbs-box/breadcrumbs-box.scss
@@ -3,7 +3,7 @@
   padding: 18px 0 15px;
   border-bottom: 1px solid $color-border-light;
 
-  @include screen('lg') {
+  @include screen('md') {
     padding-top: 14px;
   }
 }
