--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -7,7 +7,7 @@
   &:not(:last-child) {
     margin-bottom: 125px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-bottom: 80px;
     }
 
@@ -32,7 +32,7 @@
     margin-left: -25px;
     margin-right: -25px;
 
-    @include screen('lg') {
+    @include screen('md') {
       width: calc(100% + 30px);
       margin-right: -15px;
       margin-left: -15px;
@@ -54,7 +54,7 @@
       padding-right: 50px;
       padding-top: 26px;
 
-      @include screen('lg') {
+      @include screen('md') {
         width: 100%;
         padding-right: 0;
       }
@@ -70,11 +70,11 @@
         padding-right: 25px;
         padding-top: 38px;
 
-        @include screen('xl') {
+        @include screen('lg') {
           width: 100%;
         }
 
-        @include screen('lg') {
+        @include screen('md') {
           padding-left: 15px;
           padding-right: 15px;
         }
@@ -87,11 +87,11 @@
       }
 
       #{$b}_wide-lg & {
-        @include screen('xl') {
+        @include screen('lg') {
           width: 75%;
         }
 
-        @include screen('lg') {
+        @include screen('md') {
           width: 100%;
         }
       }
@@ -99,7 +99,7 @@
       &#{$b}__column_ptop-small {
         padding-top: 9px;
 
-        @include screen('lg') {
+        @include screen('md') {
           padding-top: 0;
         }
       }
@@ -115,12 +115,12 @@
         padding-left: 25px;
         padding-right: 25px;
 
-        @include screen('xl') {
+        @include screen('lg') {
           width: 100%;
           margin-bottom: 104px;
         }
 
-        @include screen('lg') {
+        @include screen('md') {
           padding-left: 15px;
           padding-right: 15px;
         }
@@ -133,12 +133,12 @@
       }
 
       #{$b}_wide-lg & {
-        @include screen('xl') {
+        @include screen('lg') {
           width: 25%;
           margin-bottom: 0;
         }
 
-        @include screen('lg') {
+        @include screen('md') {
           width: 100%;
           margin-bottom: 104px;
         }
@@ -164,7 +164,7 @@
     &_ptop-small {
       padding-top: 9px;
 
-      @include screen('lg') {
+      @include screen('md') {
         padding-top: 0;
       }
     }
@@ -173,7 +173,7 @@
   &_last {
     padding-bottom: 104px;
 
-    @include screen('lg') {
+    @include screen('md') {
       padding-bottom: 80px;
     }
 
@@ -185,7 +185,7 @@
   &_top-mg {
     margin-top: 31px;
 
-    @include screen('lg') {
+    @include screen('md') {
       margin-top: 46px;
     }
 
