--- a/app/components/filter/filter.scss
+++ b/app/components/filter/filter.scss
@@ -8,7 +8,7 @@
   &__form {
     flex: 1;
 
-    @include screen('lg') {
+    @include screen('md') {
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -21,7 +21,7 @@
     &:not(:last-child) {
       margin-right: 46px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-right: 10px;
       }
     }
@@ -29,7 +29,7 @@
     &:first-child {
       margin-right: 40px;
 
-      @include screen('lg') {
+      @include screen('md') {
         margin-right: 20px;
       }
     }
