--- a/app/components/offer-short/offer-short.scss
+++ b/app/components/offer-short/offer-short.scss
@@ -66,7 +66,7 @@
     }
 
     .is-active #{$b}:not(.is-not-available) & {
-      @include screen('lg') {
+      @include screen('md') {
         opacity: 1;
         pointer-events: auto;
       }
@@ -140,7 +140,7 @@
 
     .is-active #{$b}:not(.is-not-available) &,
     .is-active #{$b}:hover:not(.is-not-available) & {
-      @include screen('lg') {
+      @include screen('md') {
         opacity: 1;
       }
     }
