--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -5,7 +5,7 @@
   width: 100%;
   padding: 37px 0 43px;
 
-  @include screen('lg') {
+  @include screen('md') {
     padding: 34px 0 30px;
   }
 
@@ -14,7 +14,7 @@
   }
 
   &_spad {
-    @include screen('lg') {
+    @include screen('md') {
       padding: 36px 0 30px;
     }
 
@@ -35,7 +35,7 @@
     margin-left: -25px;
     margin-right: -25px;
 
-    @include screen('lg') {
+    @include screen('md') {
       width: calc(100% + 30px);
       margin-right: -15px;
       margin-left: -15px;
@@ -60,11 +60,11 @@
       padding-left: 25px;
       padding-right: 25px;
 
-      @include screen('xl') {
+      @include screen('lg') {
         width: 100%;
       }
 
-      @include screen('lg') {
+      @include screen('md') {
         justify-content: space-between;
         flex-wrap: wrap;
         flex: none;
@@ -78,11 +78,11 @@
       }
 
       #{$b}_wide-lg & {
-        @include screen('xl') {
+        @include screen('lg') {
           width: 75%;
         }
 
-        @include screen('lg') {
+        @include screen('md') {
           width: 100%;
         }
       }
@@ -94,11 +94,11 @@
       padding-left: 25px;
       padding-right: 25px;
 
-      @include screen('xl') {
+      @include screen('lg') {
         width: 100%;
       }
 
-      @include screen('lg') {
+      @include screen('md') {
         padding-left: 15px;
         padding-right: 15px;
       }
@@ -109,11 +109,11 @@
       }
 
       #{$b}_wide-lg & {
-        @include screen('xl') {
+        @include screen('lg') {
           width: 25%;
         }
 
-        @include screen('lg') {
+        @include screen('md') {
           width: 100%;
         }
       }
@@ -133,7 +133,7 @@
     font-weight: 700;
     color: $color-basic-light;
 
-    @include screen('lg') {
+    @include screen('md') {
       width: 100%;
       order: 2;
       margin-top: 10px;
