--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -10,7 +10,7 @@ block content
   +content-origin._reverse
     .container
       +e.wrapper
-        +content-column-aside._ptop.hide-xl
+        +content-column-aside._ptop.hide-lg
           +side-navigation('Change your personal info, password and notification options here')
             +nav-list-sidebar(getData('side-menu-user.json'), 'Profile & Settings').__navigation
         +content-column-main
@@ -19,15 +19,15 @@ block content
               +form-section-header
                 +form-section-title Basic account information
               +grid.grid_big
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('First name')
                       +input(type="text" name="firstName" value="Eugene" placeholder="First name")
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Last name')
                       +input(type="text" name="lastName" value="Sheeleen" placeholder="Last name")
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Country')
                       +select.js-select-input(name="country")
@@ -36,12 +36,12 @@ block content
                         option(value="ru") Russia
                         option(value="de") Germany
                         option(value="fr") France
-                +col({xl: 6, lg: 12 }).grid__col_lg-order2
+                +col({xl: 6, md:12 }).grid__col_lg-order2
                   +form-section-wrapper
                     +form-box('Phone number', '', 'div')._phone
                       +input(type="tel" name="phone-code" value="+44" placeholder="Phone code" data-tel-code).form-box__phone_code
                       +input(type="tel" name="phone-number" value="768 968 98983" placeholder="Phone number" data-tel-number).form-box__phone_number
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('E-mail adress')
                       +input(type="email" name="email" value="es@bsagency.design" placeholder="E-mail adress")
@@ -50,7 +50,7 @@ block content
                 +form-section-title Password change
                 +form-section-text In case you want to change your password just fill  the form below:
               +grid.grid_big
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Old password')._password
                       +input(type="password" name="oldPassword" value="EugeneEugene" placeholder="Old password" readonly)
@@ -58,16 +58,16 @@ block content
                         - for (var i = 0; i < 12; i++) {
                           span
                         - }
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('New password')
                       +input(type="password" name="newPassword")
-                +col({xl: 6, lg: 12 }).grid__col_lg-order2
+                +col({xl: 6, md:12 }).grid__col_lg-order2
                   +form-section-wrapper
                     +form-section-text._compensate
                       p Forgot your existing password?
                       +link(href="#")._gray._underline Recover the password VIA E-mail adress
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('New password one more time')
                       +input(type="password" name="newPasswordConfirm")
@@ -75,11 +75,11 @@ block content
               +form-section-header._lg-mmg
                 +form-section-title Profile Data
               +grid.grid_big
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Birthday', 'calendar2')._icon
                       +input.js-datepicker(type="text" name="birthday" value="31 August 1986" placeholder="Birthday")
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Residency country')
                       +select.js-select-input(name="residencyCountry")
@@ -88,7 +88,7 @@ block content
                         option(value="ru") Russia
                         option(value="de") Germany
                         option(value="fr") France
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Education grade')
                       +select.js-select-input(name="educationGrade")
@@ -97,11 +97,11 @@ block content
                         option(value="doctor") Doctor
                         option(value="master") Master
                         option(value="basic") Basic
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Company name')
                       +input(type="text" name="companyName" value="SIA Dezi BS" placeholder="Company name")
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Employee position')
                       +input(type="text" name="employeePosition" value="Art-director" placeholder="Employee position")
@@ -109,7 +109,7 @@ block content
               +form-section-header._bmg
                 +form-section-title Service settings and notifications
               +grid.grid_big
-                +col({xl: 6, lg: 12 })
+                +col({xl: 6, md:12 })
                   +form-section-wrapper._noflex
                     +checkbox('settings', '1', true)._border Notify me Via E-mail about new messages
                   +form-section-wrapper._noflex
